--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,10 +1,14 @@
-FROM python:3.8-slim
+FROM python:3.7-slim
+
+WORKDIR /app
 
 RUN apt update && \
     apt install -y \
         apt-transport-https \
         ca-certificates \
         curl \
+        g++ \
+        gcc \
         gnupg-agent \
         software-properties-common && \
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
@@ -13,3 +17,9 @@ RUN apt update && \
         $(lsb_release -cs) stable" && \
     apt update && \
     apt install -y docker-ce docker-ce-cli containerd.io
+
+RUN git clone https://github.com/deepmipt/DeepPavlov.git && \
+    cd DeepPavlov && \
+    git checkout container_el && \
+    pip install -e . && \
+    python -m deeppavlov install entity_linking_vx_sep
