fix: docker ubuntu repository

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -12,9 +12,7 @@ RUN apt update && \
         gnupg-agent \
         software-properties-common && \
     curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
-    add-apt-repository \
-        "deb [arch=amd64] https://download.docker.com/linux/debian \
-        $(lsb_release -cs) stable" && \
+    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" && \
     apt update && \
     apt install -y docker-ce docker-ce-cli containerd.io
 
