--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 aio-pika==6.4.1
-Cython==0.29.14
-fastapi==0.47.1
-filelock==3.0.12
-h5py==2.10.0
-nltk==3.4.5
-numpy==1.18.0
-overrides==2.7.0
-pandas==0.25.3
-prometheus-client==0.7.1
-pytz==2019.1
-pydantic==1.3
-pymorphy2==0.8
-pymorphy2-dicts-ru
-pyopenssl==19.1.0
-pytelegrambotapi==3.6.7
-requests==2.22.0
-ruamel.yaml==0.15.100
-rusenttokenize==0.0.5
-scikit-learn==0.21.2
-scipy==1.4.1
-tqdm==4.41.1
 click==7.1.2
-uvicorn==0.11.7
-sacremoses==0.0.35
+Cython==0.29.22
+fastapi==0.63.0
+filelock==3.0.12
+h5py==3.1.0
+nltk==3.5
+numpy==1.19.5
+overrides==3.1.0
+pandas==1.1.5
+prometheus-client==0.9.0
+pytz==2021.1
+pymorphy2==0.9.1
+pymorphy2-dicts-ru==2.4.417127.4579844
+pyOpenSSL==20.0.1
+pytelegrambotapi==3.6.7
+requests==2.25.1
+ruamel.yaml==0.16.13
+rusenttokenize==0.0.5
+sacremoses==0.0.43
+scikit-learn==0.24.1
+scipy==1.5.4
+tqdm==4.59.0
+uvicorn==0.13.4
+uvloop==0.14.0
