--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -22,7 +22,7 @@ RUN git clone https://github.com/deepmipt/DeepPavlov.git && \
     git pull && \
     git checkout 185d161cf5f8ec4af3beb0d78882ec3596009af7 && \
     pip install -e . && \
-    python -m deeppavlov install entity_linking_vx_siam && \
+    python -m deeppavlov install entity_linking_vx_siam_distil && \
     python -c 'import deeppavlov.models'
 
 COPY requirements.txt ./
