--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ pytelegrambotapi<=4.4.0
 requests<=2.27.1
 ruamel.yaml<=0.17.20
 rusenttokenize<=0.0.5
-scikit-learn<=1.0.2
+scikit-learn>=0.24,<=1.0.2
 scipy<=1.7.3
 tqdm<=4.62.3
 click<=8.0.3
