fix: RECORD file not fould error for installation of the older pybind11

--- a/utils/Docker/Dockerfile
+++ b/utils/Docker/Dockerfile
@@ -43,6 +43,7 @@ RUN apt update && \
 	ln -s /usr/local/bin/python${PYTHON_VERSION%.*} /usr/local/bin/python && \
     ln -s /usr/local/bin/pip${PYTHON_VERSION%.*} /usr/local/bin/pip && \
     pip install --upgrade pip && \
+    pip install pybind11==2.2.4 && \
     rm -rf /usr/src/python /var/lib/apt/lists/*
 
 WORKDIR /app
