fix: lxml python3.9 build

--- a/utils/Docker/Dockerfile
+++ b/utils/Docker/Dockerfile
@@ -27,6 +27,7 @@ RUN apt update && \
         libreadline-dev \
         libsqlite3-dev \
         libssl-dev \
+        libxslt-dev \
         locales \
         make \
         tk-dev \
