feat: python 3.8/3.9 support (#1525)
* refactor: dependencies is weakened to allow run deeppavlov on python 3.8/3.9

* fix: joblib import and doc build errors

* feat: added python3 tests and lowered pytoch version upper bound

* fix: Jenkinsfile venv6 usage

* refactor: reverted minor jenkinsfile changes

* feat: docker containers initial commit

* fix: Dockerfile and cmd.sh errors

* feat: call container tests from jenkinsfile

* fix: added entrypoint to image

* feat: printenv in jenkinsfile and cmd.sh for debut purposes

* fix: tfidf_logreg_en_faq compatibility with newer scikit-learn versions

* fix: tfidf_logreg_autofaq compatibility with sklearn 0.24+

* fix: removed test_tf_layers for python3.8+

* refactor: torch.nn.modules.module.ModuleAttributeError -> AttributeError

* feat: skip tensorflow-based model tests on python 3.8/3.9

* fix: locales for hdt installation

* fix: added pybind11 to image to fix kbqa/el

* refactor: building python from sources in docker images

* fix: escape dollar sign in the Jenkinsfile

* fix: added pip upgrade to fix cryptography installation error

* fix: RECORD file not fould error for installation of the older pybind11

* fix: skip_tf_config for configs located in test_src_dir

* fix: en_ranker_pop_wiki_test

* fix: update tfidf_logreg_autofaq_psearch logreg pkl to newer sklearn version

* refactor: spacy version update

* feat: added build-essential to dockerfile and updated kenlm to fix some tests

* fix: lxml python3.9 build

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-aio-pika==6.4.1
-Cython==0.29.14
-fastapi==0.47.1
-filelock==3.0.12
-h5py==2.10.0
-nltk==3.4.5
-numpy==1.18.0
-overrides==2.7.0
-pandas==0.25.3
-prometheus-client==0.7.1
-pytz==2019.1
-pydantic==1.3
-pymorphy2==0.8
+aio-pika>=3.2.2,<=6.8.2
+Cython>=0.25.2,<=0.29.27
+fastapi<=0.73.0
+filelock>=3.0.6,<=3.4.2
+h5py>=2.6.0,<=3.6.0
+nltk>=3.2.5,<=3.6.7
+numpy<=1.22.2
+overrides<=4.1.2
+pandas<=1.4.0
+prometheus-client<=0.13.1
+pytz<=2021.3
+pydantic<=1.9.0
+pymorphy2<=0.9.1
 pymorphy2-dicts-ru
-pyopenssl==19.1.0
-pytelegrambotapi==3.6.7
-requests==2.22.0
-ruamel.yaml==0.15.100
-rusenttokenize==0.0.5
-scikit-learn==0.21.2
-scipy==1.4.1
-tqdm==4.62.0
-click==7.1.2
-uvicorn==0.11.7
-sacremoses==0.0.35
-uvloop==0.14.0
+pyopenssl<=22.0.0
+pytelegrambotapi<=4.4.0
+requests<=2.27.1
+ruamel.yaml<=0.17.20
+rusenttokenize<=0.0.5
+scikit-learn>=0.24,<=1.0.2
+scipy<=1.7.3
+tqdm<=4.62.3
+click<=8.0.3
+uvicorn<=0.17.4
+sacremoses<=0.0.47
+uvloop<=0.14.0; python_version=="3.6"
