--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ numpy<=1.22.2
 overrides<=4.1.2
 pandas<=1.4.0
 prometheus-client<=0.13.1
+protobuf<4
 pytz<=2021.3
 pydantic<=1.9.0
 pymorphy2<=0.9.1
