--- a/deeppavlov/utils/settings/log_config.json
+++ b/deeppavlov/utils/settings/log_config.json
@@ -23,6 +23,13 @@
       ],
       "propagate": true
     },
+    "train_report": {
+      "level": "INFO",
+      "handlers": [
+        "train_handler"
+      ],
+      "propagate": true
+    },
     "filelock": {
       "level": "WARNING",
       "handlers": [
@@ -39,6 +46,9 @@
     "uvicorn_fmt": {
       "format": "%(asctime)s %(message)s",
       "datefmt": "%Y-%m-%d %H:%M:%S"
+    },
+    "message": {
+      "format": "%(message)s"
     }
   },
   "handlers": {
@@ -66,6 +76,12 @@
       "formatter": "uvicorn_fmt",
       "stream": "ext://sys.stdout",
       "filters": ["probeFilter"]
+    },
+    "train_handler": {
+      "class": "logging.StreamHandler",
+      "level": "INFO",
+      "formatter": "message",
+      "stream": "ext://sys.stdout"
     }
   },
   "filters": {
