--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas<=1.4.0
 prometheus-client<=0.13.1
 protobuf<4
 pytz<=2021.3
+pydantic
 pymorphy2<=0.9.1
 pymorphy2-dicts-ru
 pyopenssl<=22.0.0
