--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,8 @@ protobuf<4
 pydantic
 pymorphy2<=0.9.1
 pyopenssl<=22.0.0
-requests<=2.27.1
-scikit-learn>=0.24,<=1.0.2
-scipy<=1.7.3
-tqdm<=4.62.3
-uvicorn<=0.17.4
-uvloop<=0.14.0; python_version=="3.6"
+requests>2.19.0,<3.0.0
+scikit-learn>=0.24,<1.1.0
+scipy<1.9.0
+tqdm>=4.42.0,<4.65.0
+uvicorn>=0.13.0,<0.19.0
