--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,10 @@ nltk>=3.2.5,<=3.6.7
 numpy<=1.22.2
 overrides<=4.1.2
 pandas<=1.4.0
-prometheus-client<=0.13.1
-protobuf<4
+prometheus-client>=0.13.0,<0.15.0
 pydantic
-pymorphy2<=0.9.1
-pyopenssl<=22.0.0
-requests>2.19.0,<3.0.0
+pymorphy2==0.9.1
+requests>=2.19.0,<3.0.0
 scikit-learn>=0.24,<1.1.0
 scipy<1.9.0
 tqdm>=4.42.0,<4.65.0
