refactor: updated all main requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-aio-pika>=3.2.2,<=6.8.2
-Cython>=0.25.2,<=0.29.27
-fastapi<=0.73.0
-filelock>=3.0.6,<=3.4.2
-nltk>=3.2.5,<=3.6.7
-numpy<=1.22.2
-overrides<=4.1.2
-pandas<=1.4.0
+aio-pika>=3.2.2,<6.9.0
+fastapi>=0.47.0,<0.78.0
+filelock>=3.0.0,<3.8.0
+nltk>=3.2.5,<3.8.0
+numpy
+overrides>=2.7.0,<6.2.0
+pandas>=1.0.0,<1.5.0
 prometheus-client>=0.13.0,<0.15.0
 pydantic
 pymorphy2==0.9.1
