--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ fastapi>=0.47.0,<0.78.0
 filelock>=3.0.0,<3.8.0
 nltk>=3.2.5,<3.8.0
 numpy
-overrides>=2.7.0,<6.2.0
+overrides==5.1.0
 pandas>=1.0.0,<1.5.0
 prometheus-client>=0.13.0,<0.15.0
 pydantic
 pymorphy2==0.9.1
+pybind11==2.2.4
 requests>=2.19.0,<3.0.0
 scikit-learn>=0.24,<1.1.0
 scipy<1.9.0
