--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,16 @@
-aio-pika>=3.2.2,<=6.8.2
-Cython>=0.25.2,<=0.29.27
-fastapi<=0.73.0
-filelock>=3.0.6,<=3.4.2
-h5py>=2.6.0,<=3.6.0
-nltk>=3.2.5,<=3.6.7
-numpy<=1.22.2
-overrides<=4.1.2
-pandas<=1.4.0
-prometheus-client<=0.13.1
-protobuf<4
-pytz<=2021.3
-pydantic<=1.9.0
-pymorphy2<=0.9.1
-pymorphy2-dicts-ru
-pyopenssl<=22.0.0
-requests<=2.27.1
-ruamel.yaml<=0.17.20
-scikit-learn>=0.24,<=1.0.2
-scipy<=1.7.3
-tqdm<=4.62.3
-click<=8.0.3
-uvicorn<=0.17.4
-sacremoses<=0.0.47
-uvloop<=0.14.0; python_version=="3.6"
+aio-pika>=3.2.2,<6.9.0
+fastapi>=0.47.0,<0.78.0
+filelock>=3.0.0,<3.8.0
+nltk>=3.2.5,<3.8.0
+numpy
+overrides==4.1.2
+pandas>=1.0.0,<1.5.0
+prometheus-client>=0.13.0,<0.15.0
+pydantic
+pymorphy2==0.9.1
+pybind11==2.2.4
+requests>=2.19.0,<3.0.0
+scikit-learn>=0.24,<1.1.0
+scipy<1.9.0
+tqdm>=4.42.0,<4.65.0
+uvicorn>=0.13.0,<0.19.0
