--- a/config_2.json
+++ b/config_2.json
@@ -1,186 +1,233 @@
 {
-    "dataset_reader": {
-        "class_name": "multitask_reader",
-        "data_path": "glue", 
-        "reader_class_name":"huggingface_dataset_reader", 
-        "train" :"train", 
-        "validation" :"validation", 
-        "names" :["cola", "rte"]           
-        }, 
-
-    "dataset_iterator": {
-        "class_name": "multitask_iterator",
-        "num_train_epochs": "{NUM_TRAIN_EPOCHS}",
-        "gradient_accumulation_steps": "{GRADIENT_ACC_STEPS}",
-        "iterator_class_name": "huggingface_dataset_iterator",
-        "label": "label",
-        "use_label_name": false,
-         "seed": 42, 
-        "tasks": {
-            
-            "cola": {
-                "features": [
-                    "sentence1",
-                    "sentence2"
-                ]}, 
-            "rte": {
-                "features": [
-                    "sentence1",
-                    "sentence2"
-                ]}           
-        }
-    },
-    "chainer": {
-        "in": [
-            "x_cola_with_id",
-            "x_rte_with_id"
-        ],
-        "in_y": [
-            "y_cola",
-            "y_rte"
-        ],
-        "pipe": [
-            {
-                "class_name": "multitask_pal_bert_pipeline_preprocessor",
-                "possible_keys_to_extract":[0,1],
-                "preprocessor":"TorchTransformersPreprocessor",
-                "vocab_file":"{BACKBONE}", 
-                "max_seq_length":128,
-                "do_lower_case":true, 
-                "in": [
-                    "x_cola_with_id",
-                    "x_rte_with_id"
-                ],
-                "out": [
-                    "task_id_pipelined",
-                    "bert_features_cola_pipelined",
-                    "bert_features_rte_pipelined"
-                ]
+   "dataset_reader":{
+      "class_name":"multitask_reader",
+      "path": "glue",
+      "reader_class_name":"huggingface_dataset_reader",
+      "train":"train",
+      "validation":"validation",
+      "task_names":[
+         "cola",
+         "rte"
+      ]
+   },
+   "dataset_iterator":{
+      "class_name":"multitask_iterator",
+      "num_train_epochs":"{NUM_TRAIN_EPOCHS}",
+      "gradient_accumulation_steps":"{GRADIENT_ACC_STEPS}",
+      "iterator_class_name":"huggingface_dataset_iterator",
+      "label":"label",
+      "use_label_name":false,
+      "seed":42,
+      "tasks":{
+         "cola":{
+            "features":[
+               "sentence"
+            ]
+         },
+         "rte":{
+            "features":[
+               "sentence1",
+               "sentence2"
+            ]
+         }
+      }
+   },
+   "chainer":{
+      "in":[
+         "x_cola_with_id",
+         "x_rte_with_id"
+      ],
+      "in_y":[
+         "y_cola",
+         "y_rte"
+      ],
+      "pipe":[
+         {
+            "class_name":"multitask_pal_bert_pipeline_preprocessor",
+            "possible_keys_to_extract":[
+               0,
+               1
+            ],
+            "preprocessor":"TorchTransformersPreprocessor",
+            "vocab_file":"{BACKBONE}",
+            "max_seq_length":128,
+            "do_lower_case":true,
+            "in":[
+               "x_cola_with_id",
+               "x_rte_with_id"
+            ],
+            "out":[
+               "task_id_pipelined",
+               "bert_features_cola_pipelined",
+               "bert_features_rte_pipelined"
+            ]
+         },
+         {
+            "class_name":"multitask_preprocessor",
+            "keys_to_extract":[
+               0,
+               1
+            ],
+            "in":[
+               "x_cola_with_id",
+               "x_rte_with_id"
+            ],
+            "out":[
+               "task_id",
+               "x_cola",
+               "x_rte"
+            ]
+         },
+         {
+            "class_name":"InputSplitter",
+            "keys_to_extract":[
+               0,
+               1
+            ],
+            "in":[
+               "x_rte"
+            ],
+            "out":[
+               "x1_rte",
+               ",x2_rte"
+            ]
+         },
+         {
+            "class_name":"TorchTransformersPreprocessor",
+            "vocab_file":"{BACKBONE}",
+            "max_seq_length":128,
+            "do_lower_case":true,
+            "in":[
+               "x_cola"
+            ],
+            "out":[
+               "bert_features_cola"
+            ]
+         },
+         {
+            "class_name":"TorchTransformersPreprocessor",
+            "vocab_file":"{BACKBONE}",
+            "max_seq_length":128,
+            "do_lower_case":true,
+            "in":[
+               "x1_rte",
+               "x2_rte"
+            ],
+            "out":[
+               "bert_features_rte"
+            ]
+         },
+         {
+            "id":"multitask_bert",
+            "class_name":"multitask_bert",
+            "optimizer_parameters":{
+               "lr":2e-5
             },
-          {"class_name" :"multitask_preprocessor", "keys_to_extract":[0, 1],"in":["x_cola_with_id", "x_rte_with_id"],"out":["task_id", "x_cola", "x_rte"]},
-          {"class_name" :"InputSplitter", "keys_to_extract":[0, 1],"in":["x_rte"],"out":["x1_rte",",x2_rte"]},
-          {"class_name" :"TorchTransformersPreprocessor", 
-                "vocab_file":"{BACKBONE}", 
-                "max_seq_length":128,
-                "do_lower_case":true, 
-                "in" :["x_cola"], "out":["bert_features_cola"]},     
-          {"class_name" :"TorchTransformersPreprocessor", 
-                "vocab_file":"{BACKBONE}", 
-                "max_seq_length":128,
-                "do_lower_case":true, 
-                "in" :["x1_rte", "x2_rte"], "out":["bert_features_rte"]},           
-            {
-                "id": "multitask_bert",
-                "class_name": "multitask_bert",
-                "optimizer_parameters": {
-                    "lr": 2e-5
-                },
-                "gradient_accumulation_steps": "{GRADIENT_ACC_STEPS}",
-                "learning_rate_drop_patience": 2,
-                "learning_rate_drop_div": 2.0,
-                "attention_type": "{ATTENTION_TYPE}",
-                "log_model_summary": false,
-                "return_probas": true,
-                "backbone_model":"{BACKBONE}",
-                "save_path": "{SAVE_LOAD_PATH}",
-                "load_path": "{SAVE_LOAD_PATH}",
-                "tasks": {
-                    "cola": {
-                        "type":"classification",
-                        "options": 2
-                    },
-                    "rte": {
-                        "type":"classification",
-                        "options": 2
-                    }
-                },
-                "in": [
-                    "task_id",
-                    "bert_features_cola",
-                    "bert_features_rte"
-                ],
-                "in_y": [
-                    "y_cola",
-                    "y_rte"
-                ],
-                "out": [
-                    "y_cola_pred_probas",
-                    "y_rte_pred_probas"
-                ]
+            "gradient_accumulation_steps":"{GRADIENT_ACC_STEPS}",
+            "learning_rate_drop_patience":2,
+            "learning_rate_drop_div":2.0,
+            "log_model_summary":false,
+            "return_probas":true,
+            "backbone_model":"{BACKBONE}",
+            "save_path":"{SAVE_LOAD_PATH}",
+            "load_path":"{SAVE_LOAD_PATH}",
+            "tasks":{
+               "cola":{
+                  "type":"classification",
+                  "options":2
+               },
+               "rte":{
+                  "type":"classification",
+                  "options":2
+               }
             },
-            {
-                "in": [
-                    "y_cola_pred_probas"
-                ],
-                "out": [
-                    "y_cola_pred_ids"
-                ],
-                "class_name": "proba2labels",
-                "max_proba": true
-            },
-            {
-                "in": [
-                    "y_rte_pred_probas"
-                ],
-                "out": [
-                    "y_rte_pred_ids"
-                ],
-                "class_name": "proba2labels",
-                "max_proba": true
-            }
-        ],
-        "out": [
-            "y_cola_pred_ids",
-            "y_rte_pred_ids"
-        ]
-    },
-    "train": {
-        "epochs": "{NUM_TRAIN_EPOCHS}",
-        "batch_size": 32,
-        "metrics": [
-            {
-                "name": "multitask_accuracy",
-                "inputs": [
-                    "y_rte",
-                    "y_cola",
-                    "y_rte_pred_ids",
-                    "y_cola_pred_ids"
-                ]
-            },
-            {
-                "name": "accuracy",
-                "alias":"accuracy_cola",
-                "inputs": [
-                    "y_cola",
-                    "y_cola_pred_ids"
-                ]
-            },
-            {
-                "name": "accuracy",
-                "alias":"accuracy_rte",
-                "inputs": [
-                    "y_rte",
-                    "y_rte_pred_ids"
-                ]
-            }                     
-        ],
-        "validation_patience": 3,
-        "val_every_n_epochs": 1,
-        "log_every_n_epochs": 1,
-        "show_examples": false,
-        "evaluation_targets": [
-            "valid"
-        ],
-        "class_name": "torch_trainer"
-    },
-    "metadata": {
-        "variables": {
-            "ROOT_PATH": "/cephfs/home/karpov.d",
-            "BACKBONE":"bert-base-uncased",
-            "MODELS_PATH": "{ROOT_PATH}/.deeppavlov/models_glue_clean",
-            "SAVE_LOAD_PATH":"{MODELS_PATH}/model2_clean",
-            "NUM_TRAIN_EPOCHS":5,
-            "GRADIENT_ACC_STEPS": 1
-        }
-    }
+            "in":[
+               "task_id",
+               "bert_features_cola",
+               "bert_features_rte"
+            ],
+            "in_y":[
+               "y_cola",
+               "y_rte"
+            ],
+            "out":[
+               "y_cola_pred_probas",
+               "y_rte_pred_probas"
+            ]
+         },
+         {
+            "in":[
+               "y_cola_pred_probas"
+            ],
+            "out":[
+               "y_cola_pred_ids"
+            ],
+            "class_name":"proba2labels",
+            "max_proba":true
+         },
+         {
+            "in":[
+               "y_rte_pred_probas"
+            ],
+            "out":[
+               "y_rte_pred_ids"
+            ],
+            "class_name":"proba2labels",
+            "max_proba":true
+         }
+      ],
+      "out":[
+         "y_cola_pred_ids",
+         "y_rte_pred_ids"
+      ]
+   },
+   "train":{
+      "epochs":"{NUM_TRAIN_EPOCHS}",
+      "batch_size":32,
+      "metrics":[
+         {
+            "name":"multitask_accuracy",
+            "inputs":[
+               "y_rte",
+               "y_cola",
+               "y_rte_pred_ids",
+               "y_cola_pred_ids"
+            ]
+         },
+         {
+            "name":"accuracy",
+            "alias":"accuracy_cola",
+            "inputs":[
+               "y_cola",
+               "y_cola_pred_ids"
+            ]
+         },
+         {
+            "name":"accuracy",
+            "alias":"accuracy_rte",
+            "inputs":[
+               "y_rte",
+               "y_rte_pred_ids"
+            ]
+         }
+      ],
+      "validation_patience":3,
+      "val_every_n_epochs":1,
+      "log_every_n_epochs":1,
+      "show_examples":false,
+      "evaluation_targets":[
+         "valid"
+      ],
+      "class_name":"torch_trainer"
+   },
+   "metadata":{
+      "variables":{
+         "ROOT_PATH":"/cephfs/home/karpov.d",
+         "BACKBONE":"bert-base-uncased",
+         "MODELS_PATH":"{ROOT_PATH}/.deeppavlov/models_glue_clean",
+         "SAVE_LOAD_PATH":"{MODELS_PATH}/model2_clean",
+         "NUM_TRAIN_EPOCHS":5,
+         "GRADIENT_ACC_STEPS":1
+      }
+   }
 }
