--- a/config_2.json
+++ b/config_2.json
@@ -43,7 +43,7 @@
       ],
       "pipe":[
          {
-            "class_name":"multitask_pal_bert_pipeline_preprocessor",
+            "class_name":"multitask_pipeline_preprocessor",
             "possible_keys_to_extract":[
                0,
                1
@@ -79,7 +79,7 @@
             ]
          },
          {
-            "class_name":"InputSplitter",
+            "class_name":"input_splitter",
             "keys_to_extract":[
                0,
                1
@@ -89,11 +89,11 @@
             ],
             "out":[
                "x1_rte",
-               ",x2_rte"
+               "x2_rte"
             ]
          },
          {
-            "class_name":"TorchTransformersPreprocessor",
+            "class_name":"torch_transformers_preprocessor",
             "vocab_file":"{BACKBONE}",
             "max_seq_length":128,
             "do_lower_case":true,
@@ -105,7 +105,7 @@
             ]
          },
          {
-            "class_name":"TorchTransformersPreprocessor",
+            "class_name":"torch_transformers_preprocessor",
             "vocab_file":"{BACKBONE}",
             "max_seq_length":128,
             "do_lower_case":true,
@@ -128,6 +128,7 @@
             "learning_rate_drop_div":2.0,
             "log_model_summary":false,
             "return_probas":true,
+            "test_pipeline":true,
             "backbone_model":"{BACKBONE}",
             "save_path":"{SAVE_LOAD_PATH}",
             "load_path":"{SAVE_LOAD_PATH}",
@@ -144,7 +145,10 @@
             "in":[
                "task_id",
                "bert_features_cola",
-               "bert_features_rte"
+               "bert_features_rte",
+               "task_id_pipelined",
+               "bert_features_cola_pipelined",
+               "bert_features_rte_pipelined"
             ],
             "in_y":[
                "y_cola",
