--- a/config_5.json
+++ b/config_5.json
@@ -5,6 +5,7 @@
       "reader_class_name":"huggingface_dataset_reader",
       "train":"train",
       "validation":"validation",
+      "test":"test",
       "task_names":[
          "cola",
          "rte",
@@ -192,7 +193,7 @@
                "y_rte_pred_probas",
                "y_stsb_pred",
                "y_copa_pred_probas",
-               "y_conll_pred_probas"
+               "y_conll_pred_ids"
             ]
          },
          {
@@ -221,16 +222,6 @@
             ],
             "out":[
                "y_copa_pred_ids"
-            ],
-            "class_name":"proba2labels",
-            "max_proba":true
-         },
-         {
-            "in":[
-               "y_conll_pred_probas"
-            ],
-            "out":[
-               "y_conll_pred_ids"
             ],
             "class_name":"proba2labels",
             "max_proba":true
@@ -326,6 +317,7 @@
       "validation_patience":3,
       "val_every_n_epochs":1,
       "log_every_n_epochs":1,
+      "max_test_batches":5,
       "show_examples":false,
       "evaluation_targets":[
          "valid"
